# magicalinternetdotmoney

./: .gitignore  Anchor.toml  Cargo.toml  NO-ORACLES.md  README.md  package.json  tsconfig.json
crank-bot/: Dockerfile  fly.toml  package.json
flux-router-service/: Dockerfile  amounts.js  flux-indexer.js  flux-router.js  fly.toml  package-lock.json  package.json  server.js
harness/: README.md  fixtures.json  l2.ts  launch.ts  run-cpswap-lp.sh  run-five-pools.sh  run-integration.sh  run-launch-fork.sh  run-pinocchio-config.sh  run-pinocchio-cpi.sh  run-pinocchio-price-crawl.sh  run-pinocchio-rebalance.sh  run-surfpool.sh  run-triangle-register.sh  run-triangle.sh  run-vault-mechanism.sh
pinocchio-programs/leverage-engine/: Cargo.toml
pinocchio-programs/leverage-engine/.cargo/: config.toml
pinocchio-programs/leverage-engine/src/: config.rs  cpswap.rs  cpswap_cpi.rs  hook.rs  lib.rs  lut_cpi.rs  metadata_cpi.rs  metaplex_cpi.rs  price_crawl.rs  pumpswap.rs  token_cpi.rs  validation.rs
programs/leverage-engine/: Cargo.toml  README.md
programs/leverage-engine/src/: cpswap.rs  error.rs  lib.rs  state.rs
scripts/: crank-bot.mjs  migrate-hook-crawl-one.mjs  no-oracle-stress-results.json  no-oracle-stress.mjs  ping-pong-hook.mjs  setup-price-crawl-mainnet.mjs  test-hook-crawl-oracle.mjs  verify-mainnet-claims.mjs
sdk/: README.md
site/: .dockerignore  Dockerfile  backfill.js  finish-launch.js  flux-indexer.js  flux-router.js  fluxbeam-drain.js  fluxbeam-e2e.js  fluxbeam-lut.js  fluxbeam-pools.js  fluxbeam.js  fly.toml  init-hook-metas.js  megatxn-build.js  (+7 more)
(+69 files in other folders)
