[package]
name = "leverage-engine"
version = "0.1.0"
description = "Dynamic leveraged synthetic pair system (experimental)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "leverage_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
leverage-math = { path = "../../crates/leverage-math" }
